GNOME Bugzilla – Bug 721111
Segfault while re-importing a clip that was removed
Last modified: 2014-01-30 21:49:51 UTC
1. Import "pitivi/tests/samples/tears of steel.webm" into Pitivi 2. Remove it from the media library 3. Import it again In my case I get this: pitivi/project.py:902: Warning: invalid unclassed pointer in cast to 'GObject' self.create_asset(quote_uri(uri), GES.UriClip) (pitivi:27800): GLib-GIO-CRITICAL **: g_simple_async_result_new: assertion '!source_object || G_IS_OBJECT (source_object)' failed project.py:902: Warning: g_object_ref: assertion 'G_IS_OBJECT (object)' failed self.create_asset(quote_uri(uri), GES.UriClip) (pitivi:27800): GLib-GIO-CRITICAL **: g_simple_async_result_complete_in_idle: assertion 'G_IS_SIMPLE_ASYNC_RESULT (simple)' failed project.py:1066: Warning: g_object_ref: assertion 'G_IS_OBJECT (object)' failed nb_remaining_file_to_import = len([asset for asset in self.get_loading_assets() if project.py:1066: g_object_get_qdata: assertion 'G_IS_OBJECT (object)' failed nb_remaining_file_to_import = len([asset for asset in self.get_loading_assets() if ...followed by a huge, nasty segfault: (gdb) bt full
+ Trace 232960
And interestingly enough, this happens on my desktop computer (Fedora 20) but not my laptop (F19).
Unittest segfaulting here: https://github.com/aleb/pitivi/commit/9da98a1c1d39a122495382b34fa95b872db18a8f
Created attachment 267298 [details] [review] Reference newly added asset.
The attached patch fixes it here, need thibault to review it.
Created attachment 267299 [details] [review] Correct fix after checking with thib
Created attachment 267313 [details] [review] ges-asset: Do not forget to give a ref to the registry + Add test in the testsuite + Fix broken tests
Created attachment 267315 [details] [review] ges-asset: Do not forget to give a ref to the registry + Add test in the testsuite + Fix broken tests
Pushed.
For the reference: commit 94dbf20400f7aeff6e43c947cf413abf0a8ce61f Author: Thibault Saunier <thibault.saunier@collabora.com> Date: Mon Jan 27 15:30:40 2014 +0100 ges-asset: Do not forget to give a ref to the registry + Add test in the testsuite + Fix broken tests https://bugzilla.gnome.org/show_bug.cgi?id=721111