uri-asset: Let a chance for user to change URI if the set one is not readable

It sounds like the most logical thing to do in that case.

https://bugzilla.gnome.org/show_bug.cgi?id=721111